syntax = "proto3";

package posts_info;

import "google/protobuf/empty.proto";

service PostsInfo {
    rpc GetPosts (google.protobuf.Empty) returns (PostsResponse);
    rpc GetPost (PostRequest) returns (PostResponse);
    rpc GetPostsStream (google.protobuf.Empty) returns (stream PostResponse);
}

message PostsResponse {
    repeated string post = 1;
}

message PostRequest {
    uint64 id = 1;
}

message PostResponse {
    Post post = 1;
}

message Post {
    uint64 id = 1;
    string title = 2;
    string text = 3;
}
